moved image to folder and fixed player

--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@ body {
 }
 
 #canvas {
-    background-color: rgb(56, 56, 56);
+    background: rgb(56, 56, 56);
+    border-radius: 5px;
 }
 
 #source {
