add menu screen

--- a/style.css
+++ b/style.css
@@ -22,3 +22,16 @@ body {
 #source {
     display: none;
 }
+
+a {
+    color: white;
+    text-decoration: none;
+}
+
+a:visited {
+    color: white
+}
+
+a:hover {
+    color: rgb(170, 170, 170)
+}
