--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
+:root {
+    --gradient: linear-gradient(
+        45deg,
+        #1d2b64 0%,
+        #3a1c71 25%,
+        #d76d77 50%,
+        #ffaf7b 75%,
+        #1d2b64 100%
+    );
+}
+
 * {
     box-sizing: border-box;
 }
 
 body {
-    background-color: black;
+    background-image: var(--gradient);
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -12,6 +23,17 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     min-height: 100vh;
     margin: 0;
+    background-size: 400%;
+    animation: bg-animation 20s infinite alternate;
+}
+
+@keyframes bg-animation {
+    0% {
+        background-position: left;
+    }
+    100% {
+        background-position: right;
+    }
 }
 
 #canvas {
