Fix player bullet dissapearing when enemy bullet hits obstacle. Update gradient

--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
         45deg,
         #1d2b64 0%,
         #3a1c71 25%,
-        #d76d77 50%,
-        #ffaf7b 75%,
+        #d76d9971 50%,
+        #444aa0 75%,
         #1d2b64 100%
     );
 }
